--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <form class="note">
                 <input class="note__title" type="text" name="title" placeholder="Título" autofocus />
                 <textarea class="note__body" name="body" rows="5" placeholder="Criar uma nota..."></textarea>
-                <button class="note__control" type="button" onclick="addNote(this.form, this.parentElement.title, this.parentElement.body, this.parentElement.nextElementSibling)">
+                <button class="note__control" type="button" onclick="addNote(this.form, this.parentElement.title, this.parentElement.body)">
                     Concluído
                 </button>
             </form>
@@ -23,6 +23,6 @@
             </section>
         </main>
 
-        <script src="js/scripts.js"></script>
+        <script src="dist/bundle.js"></script>
     </body>
 </html>
